tests/negative/typecheck/try_function.orng
// try_function.orng:6:8: error: enclosing function around try expression does not return an error
//     try f()
//       ^
// 
fn main() -> Int {
    try f()
}

fn f() -> Bool!Int {
    return .err(false)
}